# asst5

./: CMakeLists.txt  CameraPipe.sln  README.md
CameraPipeline/: CMakeLists.txt  CameraPipeline.cpp  CameraPipeline.vcxproj  CameraPipeline.vcxproj.filters  CameraSensor.h  CameraSensor_Dist.cpp  Image.h
CoreLib/: Array.h  Basic.h  Common.h  CoreLib.vcxproj  CoreLib.vcxproj.filters  Dictionary.h  Events.h  Events_Element.h  Exception.h  IntSet.h  LibIO.cpp  LibIO.h  LibMath.h  LibString.cpp  LibString.h  Link.h  List.h  Parser.cpp  Parser.h  PerformanceCounter.cpp  PerformanceCounter.h  SecureCRT.h  SmartPointer.h  Stream.cpp  Stream.h  TextIO.cpp  TextIO.h  Threading.h  VectorMath.cpp  VectorMath.h  WideChar.cpp  corelib.natvis
CoreLib/GL/: gl2.h  glLoader.cpp  glLoader.h  glext_old.h
CoreLib/Graphics/: BBox.h  BezierMesh.cpp  Camera.cpp  Camera.h  ObjModel.cpp  ObjModel.h  OpenGL.cpp  OpenGL.h
CoreLib/Imaging/: Bitmap.cpp  Bitmap.h  TextureData.cpp  TextureData.h  stb_image.c
CoreLib/Regex/: MetaLexer.cpp  MetaLexer.h  RegexDFA.cpp  RegexNFA.cpp  RegexParser.cpp  RegexTree.cpp  RegexTree.h
CoreLib/WinForm/: Debug.cpp  Debug.h  WinAccel.cpp  WinAccel.h  WinApp.cpp  WinApp.h  WinButtons.cpp  WinButtons.h  WinCommonDlg.cpp  WinCtrls.cpp  WinCtrls.h  WinForm.cpp  WinForm.h  WinMenu.cpp  WinMenu.h  WinMessage.cpp  WinMessage.h  WinTimer.cpp  WinTimer.h
